# Subspace

./: .gitignore  AGENTS.md  CHANGELOG.md  PLUGIN_SYSTEM_VISION.md  PRODUCT_VISION.md  README.md  RELEASE_SIGNING.md  STATUS.md  VISUAL_IDENTITY.md  android-ptt-scaffold-spec.md  build.gradle.kts  flake.nix  gradle.properties  manual-audio-verification-sheet.html  renovate.json  settings.gradle.kts
.github/: release-signing-pubkey.asc
.github/workflows/: ci.yml  release.yml
.omp/: android-dap-proxy.py  config.yml  dap.json  kotlin-lsp-wrapper.sh  lsp.json
.omp/skills/subspace-publish-release/: SKILL.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
openspec/changes/add-async-agent-channel/: design.md  implementation-notes.md  proposal.md  tasks.md
openspec/changes/add-lua-audio-echo-and-debug-example/: design.md  proposal.md  tasks.md
openspec/changes/add-main-device-channel-view/: design.md  tasks.md
openspec/changes/add-webhook-channel/: design.md  proposal.md  tasks.md
openspec/changes/android-release-signing-pipeline/: tasks.md
openspec/changes/commit-channel-before-ready-beep/: design.md  tasks.md
openspec/changes/configurable-channels/: design.md  proposal.md  tasks.md
openspec/changes/configure-car-hfp-device/: design.md  tasks.md
openspec/changes/coordinate-half-duplex-audio-playback/: tasks.md
openspec/changes/diagnostics-channel/: tasks.md
openspec/changes/enable-lua-openai-agent-channel/: design.md  proposal.md  tasks.md
openspec/changes/establish-lua-channel-runtime-v1/: design.md  tasks.md
openspec/changes/fix-background-rsm-service-lifetime/: tasks.md
openspec/changes/fix-car-mode-capture-release-regression/: design.md  proposal.md  tasks.md
openspec/changes/fix-jni-startup-ui-blocking/: tasks.md
openspec/changes/fix-mode-audio-routing/: design.md  proposal.md  tasks.md
openspec/changes/generalize-channel-runtime/: design.md  proposal.md  tasks.md
openspec/changes/harden-channel-platform-for-lua/: proposal.md  tasks.md
openspec/changes/harden-ptt-route-and-journal-finalization/: design.md  proposal.md  tasks.md
openspec/changes/initial-setup-page/: design.md  proposal.md  tasks.md
openspec/changes/integrate-lua-actor-runtime/: proposal.md  tasks.md
openspec/changes/migrate-debug-channel-to-lua/: design.md  tasks.md
openspec/changes/output-bug-diagnostic-logging/: tasks.md
openspec/changes/prove-embedded-lua-runtime/: design.md
openspec/changes/refine-dashboard-visuals/: tasks.md
openspec/changes/remove-builtin-keyboard-generalize-transport-state/: design.md  proposal.md  tasks.md
openspec/changes/split-ptt-foreground-service/: design.md  implementation-evidence.md  proposal.md  tasks.md
openspec/changes/state-gated-audio-route-transitions/: tasks.md
openspec/changes/use-native-navigation-tts/: design.md  proposal.md
openspec/specs/agent-client-tools/: spec.md
openspec/specs/android-auto-virtual-ptt/: spec.md
openspec/specs/announcement-vocabulary-cache/: spec.md
openspec/specs/app-bootstrap/: spec.md
openspec/specs/asynchronous-channel-messages/: spec.md
openspec/specs/audio-input-session-lifecycle/: spec.md
openspec/specs/captains-log-channel/: spec.md
openspec/specs/capture-service/: spec.md
openspec/specs/car-contextual-skip-controls/: spec.md
openspec/specs/car-hfp-configuration/: spec.md
openspec/specs/car-input-mode-auto-switch/: spec.md
openspec/specs/car-media-channel-browse/: spec.md
openspec/specs/channel-catalogue/: spec.md
openspec/specs/channel-framework/: spec.md
openspec/specs/channel-host-capabilities/: spec.md
openspec/specs/channel-implementation-providers/: spec.md
openspec/specs/channel-routing/: spec.md
openspec/specs/channel-runtime-invocation/: spec.md
openspec/specs/channel-runtime-registry/: spec.md
openspec/specs/ci-keystore-provisioning/: spec.md
openspec/specs/debug-channel/: spec.md
openspec/specs/device-auto-reconnect/: spec.md
openspec/specs/diagnostics-channel/: spec.md
openspec/specs/embedded-lua-runtime-substrate/: spec.md
openspec/specs/github-package-installation/: spec.md
openspec/specs/half-duplex-audio-coordination/: spec.md
openspec/specs/initial-setup/: spec.md
openspec/specs/input-mode/: spec.md
openspec/specs/installed-lua-packages/: spec.md
openspec/specs/keyboard-channel/: spec.md
openspec/specs/lua-actor-runtime/: spec.md
openspec/specs/lua-audio-api/: spec.md
openspec/specs/lua-audio-file-api/: spec.md
openspec/specs/lua-channel-api/: spec.md
openspec/specs/lua-channel-configuration/: spec.md
openspec/specs/lua-channel-provider/: spec.md
openspec/specs/lua-filesystem-api/: spec.md
openspec/specs/lua-journal-channel/: spec.md
openspec/specs/lua-keyboard-channel/: spec.md
openspec/specs/lua-keyboard-output-api/: spec.md
openspec/specs/lua-package-format/: spec.md
openspec/specs/lua-resource-mounts/: spec.md
rust/: Cargo.toml
rust/subspace-lua-actor/: Cargo.toml
rust/subspace-lua-actor/subspace-lua-actor/: Cargo.toml
rust/subspace-lua-actor/subspace-lua-actor/src/: accounting.rs  hostop.rs  jni_bridge.rs  lib.rs  outcome.rs  ownership.rs  state.rs
rust/subspace-lua-actor/subspace-lua-actor/tests/: conformance.rs  debug_fixture.rs  diagnostics_fixture.rs  fs_conformance.rs  keyboard_conformance.rs  runtime_v1_conformance.rs
rust/subspace-lua-proof/: Cargo.toml
rust/subspace-lua-proof/subspace-lua-proof/: Cargo.toml
rust/subspace-lua-proof/subspace-lua-proof/src/: jni_bridge.rs  lib.rs  outcome.rs  state.rs  topology.rs
rust/subspace-lua-proof/subspace-lua-proof/tests/: conformance.rs
rust/subspace-ogg/: Cargo.toml
rust/subspace-ogg/src/: lib.rs
rust/subspace-parakeet/: Cargo.toml
rust/subspace-parakeet/src/: asset.rs  engine.rs  lib.rs  log.rs
rust/subspace-supertonic/: Cargo.toml
rust/subspace-supertonic/src/: asset.rs  engine.rs  helper.rs  lib.rs  log.rs
sleepwalker-core/: UPSTREAM  build.gradle.kts
(+922 files in other folders)
