[package]
name = "subspace-ogg"
version = "0.1.0"
edition = "2021"
description = "Subspace OGG/Vorbis encoder bridge (JNI, on-device, no network)"
license = "MIT"
publish = false

[lib]
name = "subspace_ogg"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
thiserror = "2"
vorbis_rs = { version = "0.5.5", default-features = false }

[dev-dependencies]
tempfile = "3"
