[package]
name = "subspace-parakeet"
version = "0.1.0"
edition = "2021"
description = "Subspace Parakeet v3 STT bridge (JNI, on-device, no network)"
license = "MIT"
publish = false

[lib]
name = "subspace_parakeet"
crate-type = ["cdylib"]

[dependencies]
transcribe-rs = { version = "=0.3.11", default-features = false, features = ["onnx"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "tls-rustls-no-provider"] }
jni = "0.21"
log = "0.4"
once_cell = "1"
thiserror = "2"

[features]
default = []

[dev-dependencies]
tempfile = "3"