[package]
name = "subspace-supertonic"
version = "0.1.0"
edition = "2021"
description = "Subspace Supertonic 3 TTS bridge (JNI, on-device, no network)"
license = "MIT"
publish = false

[lib]
name = "subspace_supertonic"
crate-type = ["cdylib"]

[dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "tls-rustls-no-provider", "api-24"] }
ndarray = "0.17"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
regex = "1"
jni = "0.21"
log = "0.4"
once_cell = "1"
thiserror = "2"

[features]
default = []

[dev-dependencies]
tempfile = "3"
hound = "3.5"